@@ -126,6 +126,7 @@ import org.codehaus.groovy.control.CompilationFailedException;
 import org.codehaus.groovy.control.CompilePhase;
 import org.codehaus.groovy.control.SourceUnit;
 import org.codehaus.groovy.control.messages.SyntaxErrorMessage;
+import org.codehaus.groovy.runtime.ArrayGroovyMethods;
 import org.codehaus.groovy.runtime.StringGroovyMethods;
 import org.codehaus.groovy.syntax.Numbers;
 import org.codehaus.groovy.syntax.SyntaxException;
@@ -159,10 +160,8 @@ import static org.codehaus.groovy.ast.tools.GeneralUtils.block;
 import static org.codehaus.groovy.ast.tools.GeneralUtils.callThisX;
 import static org.codehaus.groovy.ast.tools.GeneralUtils.callX;
 import static org.codehaus.groovy.ast.tools.GeneralUtils.closureX;
-import static org.codehaus.groovy.ast.tools.GeneralUtils.declS;
 import static org.codehaus.groovy.ast.tools.GeneralUtils.declX;
 import static org.codehaus.groovy.ast.tools.GeneralUtils.listX;
-import static org.codehaus.groovy.ast.tools.GeneralUtils.localVarX;
 import static org.codehaus.groovy.ast.tools.GeneralUtils.returnS;
 import static org.codehaus.groovy.ast.tools.GeneralUtils.stmt;
 import static org.codehaus.groovy.ast.tools.GeneralUtils.varX;
@@ -458,12 +457,10 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
     @Override
     public Statement visitLoopStmtAlt(final LoopStmtAltContext ctx) {
         switchExpressionRuleContextStack.push(ctx);
-        visitingLoopStatementCount += 1;
         try {
             return configureAST((Statement) this.visit(ctx.loopStatement()), ctx);
         } finally {
             switchExpressionRuleContextStack.pop();
-            visitingLoopStatementCount -= 1;
         }
     }
 
@@ -524,7 +521,7 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
           .map(e -> (Expression) this.visit(e)).orElse(EmptyExpression.INSTANCE));
         closureListExpression.addExpression(this.visitForUpdate(ctx.forUpdate()));
 
-        return (body) -> new ForStatement(ForStatement.FOR_LOOP_DUMMY, closureListExpression, body);
+        return (body) -> new ForStatement(closureListExpression, body);
     }
 
     @Override
@@ -723,7 +720,6 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
     @Override
     public SwitchStatement visitSwitchStatement(final SwitchStatementContext ctx) {
         switchExpressionRuleContextStack.push(ctx);
-        visitingSwitchStatementCount += 1;
         try {
             List<Statement> statementList =
                     ctx.switchBlockStatementGroup().stream()
@@ -762,7 +758,6 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
                     ctx);
         } finally {
             switchExpressionRuleContextStack.pop();
-            visitingSwitchStatementCount -= 1;
         }
     }
 
@@ -847,10 +842,6 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
 
     @Override
     public BreakStatement visitBreakStatement(final BreakStatementContext ctx) {
-        if (visitingLoopStatementCount == 0 && visitingSwitchStatementCount == 0) {
-            throw createParsingFailedException("break statement is only allowed inside loops or switches", ctx);
-        }
-
         if (switchExpressionRuleContextStack.peek() instanceof SwitchExpressionContext) {
             throw createParsingFailedException("switch expression does not support `break`", ctx);
         }
@@ -876,10 +867,6 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
 
     @Override
     public ContinueStatement visitContinueStatement(final ContinueStatementContext ctx) {
-        if (visitingLoopStatementCount == 0) {
-            throw createParsingFailedException("continue statement is only allowed inside loops", ctx);
-        }
-
         if (switchExpressionRuleContextStack.peek() instanceof SwitchExpressionContext) {
             throw createParsingFailedException("switch expression does not support `continue`", ctx);
         }
@@ -889,7 +876,6 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
                 : null;
 
         return configureAST(new ContinueStatement(label), ctx);
-
     }
 
     @Override
@@ -1833,19 +1819,24 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
     }
 
     private MethodNode createMethodNodeForClass(final MethodDeclarationContext ctx, final ModifierManager modifierManager, final String methodName, final ClassNode returnType, final Parameter[] parameters, final ClassNode[] exceptions, Statement code, final ClassNode classNode, int modifiers) {
-        if (asBoolean(ctx.elementValue())) { // the code of annotation method
-            code = configureAST(
-                    new ExpressionStatement(
-                            this.visitElementValue(ctx.elementValue())),
-                    ctx.elementValue());
-
+        ElementValueContext elementValue = ctx.elementValue();
+        if (asBoolean(elementValue)) {
+            assert this.isAnnotationDeclaration(classNode);
+            Expression defaultValue = this.visitElementValue(elementValue);
+            if (returnType.isArray() && defaultValue instanceof ClosureExpression closure // GROOVY-11492
+                    && ClosureUtils.hasImplicitParameter(closure) && closure.getCode() instanceof BlockStatement block) {
+                defaultValue = listX(block.getStatements().stream().map(s -> ((ExpressionStatement) s).getExpression()).toList());
+            }
+            code = configureAST(stmt(defaultValue), elementValue);
         }
 
-        modifiers |= !modifierManager.containsAny(STATIC) && classNode.isInterface() && !(isTrue(classNode, IS_INTERFACE_WITH_DEFAULT_METHODS) && modifierManager.containsAny(DEFAULT, PRIVATE)) ? Opcodes.ACC_ABSTRACT : 0;
-        MethodNode methodNode = new MethodNode(methodName, modifiers, returnType, parameters, exceptions, code);
-        classNode.addMethod(methodNode);
+        if (classNode.isInterface() && !modifierManager.containsAny(STATIC) && !(isTrue(classNode, IS_INTERFACE_WITH_DEFAULT_METHODS) && modifierManager.containsAny(DEFAULT, PRIVATE))) {
+            modifiers |= Opcodes.ACC_ABSTRACT;
+        }
 
-        methodNode.setAnnotationDefault(asBoolean(ctx.elementValue()));
+        MethodNode methodNode = new MethodNode(methodName, modifiers, returnType, parameters, exceptions, code);
+        methodNode.setAnnotationDefault(asBoolean(elementValue));
+        classNode.addMethod(methodNode);
         return methodNode;
     }
 
@@ -2259,34 +2250,19 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
      *        ,it may be a command expression
      */
     private void validateInvalidMethodDefinition(final Expression baseExpr, final Expression arguments) {
-        if (baseExpr instanceof VariableExpression) {
-            if (isBuiltInType(baseExpr) || Character.isUpperCase(baseExpr.getText().codePointAt(0))) {
-                if (arguments instanceof ArgumentListExpression) {
-                    List<Expression> expressionList = ((ArgumentListExpression) arguments).getExpressions();
-                    if (1 == expressionList.size()) {
-                        final Expression expression = expressionList.get(0);
-                        if (expression instanceof MethodCallExpression mce) {
-                            final Expression methodCallArguments = mce.getArguments();
-
-                            // check the method call tails with a closure
-                            if (methodCallArguments instanceof ArgumentListExpression) {
-                                List<Expression> methodCallArgumentExpressionList = ((ArgumentListExpression) methodCallArguments).getExpressions();
-                                final int argumentCnt = methodCallArgumentExpressionList.size();
-                                if (argumentCnt > 0) {
-                                    final Expression lastArgumentExpression = methodCallArgumentExpressionList.get(argumentCnt - 1);
-                                    if (lastArgumentExpression instanceof ClosureExpression) {
-                                        if (ClosureUtils.hasImplicitParameter(((ClosureExpression) lastArgumentExpression))) {
-                                            throw createParsingFailedException(
-                                                    "Method definition not expected here",
-                                                    tuple(baseExpr.getLineNumber(), baseExpr.getColumnNumber()),
-                                                    tuple(expression.getLastLineNumber(), expression.getLastColumnNumber())
-                                            );
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
+        if (baseExpr instanceof VariableExpression && arguments instanceof ArgumentListExpression argsList
+                && (isBuiltInType(baseExpr) || Character.isUpperCase(baseExpr.getText().codePointAt(0)))) {
+            List<Expression> exprList = argsList.getExpressions();
+            if (exprList.size() == 1
+                    && exprList.get(0) instanceof MethodCallExpression callExpr
+                    && callExpr.getArguments() instanceof ArgumentListExpression callArgs) {
+                exprList = callArgs.getExpressions(); // check the method call tails with a closure
+                if (!exprList.isEmpty() && last(exprList) instanceof ClosureExpression closure && ClosureUtils.hasImplicitParameter(closure)) {
+                    throw createParsingFailedException(
+                            "Method definition not expected here",
+                            tuple(baseExpr.getLineNumber(), baseExpr.getColumnNumber()),
+                            tuple(callExpr.getLastLineNumber(), callExpr.getLastColumnNumber())
+                    );
                 }
             }
         }
@@ -3996,7 +3972,7 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
             GenericsType[] generics = this.visitTypeArguments(ctx.typeArguments());
             classNode.setGenericsTypes(generics);
             if (isTrue(ctx, IS_INSIDE_INSTANCEOF_EXPR) && Arrays.stream(generics).anyMatch(gt ->
-                    !gt.isWildcard() || asBoolean(gt.getLowerBound()) || asBoolean(gt.getUpperBounds()))) { // GROOVY-11585
+                    !gt.isWildcard() || asBoolean(gt.getLowerBound()) || ArrayGroovyMethods.asBoolean(gt.getUpperBounds()))) { // GROOVY-11585
                 throw this.createParsingFailedException("Cannot perform instanceof check against parameterized type " + classNode, ctx);
             }
         }
@@ -4239,7 +4215,7 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
 
     @Override
     public ListExpression visitElementValueArrayInitializer(final ElementValueArrayInitializerContext ctx) {
-        return configureAST(new ListExpression(ctx.elementValue().stream().map(this::visitElementValue).collect(Collectors.toList())), ctx);
+        return configureAST(listX(ctx.elementValue().stream().map(this::visitElementValue).toList()), ctx);
     }
 
     @Override
@@ -4760,8 +4736,6 @@ public class AstBuilder extends GroovyParserBaseVisitor<Object> {
     private Tuple2<GroovyParserRuleContext, Exception> numberFormatError;
 
     private int visitingClosureCount;
-    private int visitingLoopStatementCount;
-    private int visitingSwitchStatementCount;
     private int visitingAssertStatementCount;
     private int visitingArrayInitializerCount;
 
