@@ -96,7 +96,15 @@ public class GroovyDocTool {
             .orElse(null);
 
         if (version == null) {
-            return null;
+            version = "JAVA_" + Runtime.version().feature();
+            boolean previewEnabled = java.lang.management.ManagementFactory.getRuntimeMXBean().getInputArguments().contains("--enable-preview");
+            if (previewEnabled) version += "_PREVIEW";
+
+            try {
+                return ParserConfiguration.LanguageLevel.valueOf(version);
+            } catch (IllegalArgumentException e) {
+                return ParserConfiguration.LanguageLevel.BLEEDING_EDGE;
+            }
         }
 
         try {
@@ -112,6 +120,7 @@ public class GroovyDocTool {
             log.debug("Loading source files for " + filenames);
         }
 
+        // The default language level is POPULAR(i.e. JAVA_11) in JavaParser 3.28.0
         ParserConfiguration.LanguageLevel previousLanguageLevel = StaticJavaParser.getParserConfiguration().getLanguageLevel();
         try {
             if(javaLanguageLevel != null) {
